Add more citations to lit review, fix spacing

--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -1,3 +1,33 @@
+@article{abstraction,
+author = {Kahanwal, Brijender},
+year = {2013},
+month = {11},
+pages = {},
+title = {Abstraction Level Taxonomy of Programming Language Frameworks},
+doi = {10.5121/ijpla.2013.3401}
+}
+@article{modern,
+author = {Ertl, M. and Gregg, David},
+year = {2001},
+month = {11},
+pages = {},
+title = {The Behavior of Efficient Virtual Machine Interpreters on Modern Architectures},
+isbn = {978-3-540-42495-6},
+doi = {10.1007/3-540-44681-8_59}
+}
+@article{bebic,
+  title={Operation DSL Making bytecode interpreters a walk in the park},
+  author={Bebic, Nikola and Humer, Christian},
+  year={2022}
+}
+@article{fang2016,
+      title={A Performance Survey on Stack-based and Register-based Virtual Machines}, 
+      author={Ruijie Fang and Siqi Liu},
+      year={2016},
+      eprint={1611.00467},
+      archivePrefix={arXiv},
+      primaryClass={cs.PL}
+}
 @article{structure_and_performance,
 author = {Ertl, M. and Gregg, David},
 year = {2003},
