--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -17,6 +17,20 @@
 \maketitle
 \clearpage
 \tableofcontents
+
+\section{Abstract}
+Building a virtual machine interpreter following the traditional approach of
+using C or assembly can be frustrating, even more since we have modern
+high-level langauges that provides us with safety features and a better
+development experience. This paper describes the process of building a virtual
+machine interpreter in Rust, highlighting the convenience of modern high-level
+language features. It shows the impact of optimizations and efficient
+implementations in visual benchmarks and compares against industry-standard
+approaches. We are discussing advantages and disadvantages of different
+implementation approaches such as stack-based vs register-based virtual
+machines, optimizations like superinstructions or interpreter based
+optimizations like the computed goto optimization.
+
 \section{Introduction}
 
 %1. Introduction: objectives, intro to contents (overview)
