--- a/dissertation/dissertation.bib
+++ b/dissertation/dissertation.bib
@@ -68,7 +68,7 @@ author = {Ertl, M. Anton and Gregg, David and Krall, Andreas and Paysan, Bernd},
 title = {Vmgen: A Generator of Efficient Virtual Machine Interpreters},
 year = {2002},
 issue_date = {March 2002},
-publisher = {John Wiley & Sons, Inc.},
+publisher = {John Wiley \& Sons, Inc.},
 address = {USA},
 volume = {32},
 number = {3},
