--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -4,33 +4,43 @@
     Marcel Taubert  (mt652)\\
     20962335        \\
     \\
+    2023\\
     School of Computing \\
     MSc Advanced Computer Science\\
     University of Kent \\
-    \\
+    \\\\
     Supervisor: Dr. Michael Vollmer
+    \\\\
+    Total word count: 7003
+    \\\\
 }
 \usepackage{natbib,hyperref}
 \usepackage{graphicx}
+\usepackage{pdfpages}
 \date{\today}
 \begin{document}
 \maketitle
 \clearpage
+\includepdf[pages=-]{access_form.pdf}
+\clearpage
 \tableofcontents
+\clearpage
 
-\section{Abstract}
+\section*{\textit{Abstract}}
 Building a virtual machine interpreter following the traditional approach of
-using C or assembly can be frustrating, even more since we have modern
-high-level langauges that provides us with safety features and a better
-development experience. This paper describes the process of building a virtual
-machine interpreter in Rust, highlighting the convenience of modern high-level
-language features. It shows the impact of optimizations and efficient
-implementations in visual benchmarks and compares against industry-standard
-approaches. We are discussing advantages and disadvantages of different
-implementation approaches such as stack-based vs register-based virtual
-machines, optimizations like superinstructions or interpreter based
-optimizations like the computed goto optimization.
+using C or assembly as an implementation langauge can be frustrating,
+furthermore since we have modern high-level langauges that provides us with
+safety features and an overall better development experience. This paper
+describes the process of building a virtual machine interpreter in Rust which
+highlight the convenience of modern high-level language features. It shows the
+impact of optimizations and efficient implementations in visual benchmarks and
+compares against industry-standard approaches. We discussed the advantages and
+disadvantages of different implementation approaches such as stack-based and
+register-based virtual machines, compiler optimizations like superinstructions
+and constant folding or interpreter based optimizations such as the computed goto
+optimization.
 
+\clearpage
 \section{Introduction}
 
 %1. Introduction: objectives, intro to contents (overview)
@@ -74,20 +84,25 @@ optimizations like the computed goto optimization.
 %- whats good about interpreters
 %*/
 
-In today's modern world, everything operates through code. We all use
-technology that's powered by code, whether we realize it or not. However, most
-individuals, including a substantial number of programmers, lack an
-understanding of how the code is executed on their devices.
+In the modern world we live in today, everyone of us uses technology which
+is powered by code. Technology is in our phones and computers and now even
+in smart light bulbs and smart toasters. The code running on our devices
+is written by programmers around the world but many people, including a
+substantial number of programmers, lack an understanding of how the code is
+executed on their devices.
+In this paper we will explore one approach to executing code called
+interpreting. More precisely we will explore the implementation of a
+virtual machine interpreter in the programming language Rust.
 
 \subsection{What is an interpreter?}
-
-In general, there are two approaches to executing code. Both methods involve
-translating the human-readable code into a more abstract form that the computer
-can understand. \\
+When we want to execute our program written in a high-level language such as
+Python, we first need to translate the human-readable source coding into a
+format the computer can understand. We differentiate on two approaches how this
+can be archived.
 
 The first technique describes the process of code being compiled (translated)
 into machine code. The end product is a stand-alone program that can be
-executed at any time on the architecture it was compiled for. \\
+executed at any time on the architecture it was compiled for.
 
 The second approach is called 'interpreting'. There are two primary methods for
 how an interpreter works. One approach is called a tree-walk interpreter. In
@@ -99,21 +114,21 @@ will then be fed into the virtual machine which executes it. We will use a
 virtual machine interpreter in this paper. Interpreters are generally easier to
 implement and have some other advantages that make them more approachable than
 compilers like portability or a fast edit-compile-run cycle as stated by the
-authors of vmgen ~\cite{vmgen}. 
+authors of the paper 'vmgen' ~\cite{vmgen}. 
 
 \subsection{What is a virtual machine interpreter?}
 A famous technique to implement interpreters is to build a virtual machine
 interpreter. A VM interpreter is generally divided into two systems. A frontend
-and a backend. ~\cite{vmgen} \\
+and a backend. ~\cite{vmgen}
 
 The frontend consists of a compiler that takes the written code and produces a
-sequence of bytecode instructions. The backend is a virtual machine that gets
+sequence of byte code instructions. The backend is a virtual machine that gets
 the stream of bytecode instructions as input and executes them. ~\cite{vmgen}
-The bytecode or intermediate representation used in a VM interpreter is usually
-designed to be very similar to a real machine. ~\cite{vmgen} Some real-world
-examples of virtual machine interpreters are for example the JVM (Java Virtual
-Machine) or the PVM (Python Virtual Machine).
-\\
+The byte code or intermediate representation (IR) used in a VM interpreter is
+usually designed to be very similar to a real machine. ~\cite{vmgen} Some
+real-world examples of virtual machine interpreters are for example the JVM
+(Java Virtual Machine) or the PVM (Python Virtual Machine).
+
 \subsection{Virtual machine}
 When we are talking about virtual machines we distinguish between stack-based
 VMs and register-based VMs. Each of the versions has its advantages and
@@ -141,21 +156,18 @@ Optimizations are essential for delivering efficient and performant execution of
 programs. These optimizations can be implemented by the compiler directly or
 by other parts of a VM interpreter such as the JIT (Just in Time) compiler, which
 are more complex and will not be covered in this paper.
-\\ \\
 Optimizations generally involve a trade-off in compilation time and memory
 against execution speed. This results in additional passes on the generated
 byte code for example that are needed to implement certain optimizations.
-\\ \\
 During the development of this project, we have looked at several different
 optimizations. Some of the optimizations that we have implemented for the
-project are threaded code inside of the interpreter and superinstructions in
-the compiler.
+project are threaded code or the computed goto optimization inside of the
+interpreter and superinstructions and constant folding in the compiler.
 
 \subsection{Automation}
 Writing an interpreter for a programming language can be a tedious and
 challenging task on its own. Thinking about how to keep the code efficient and
 implement optimizations makes it even harder.
-\\ \\ 
 One solution to this is automating the process of writing a virtual machine
 interpreter. This would prevent many error sources such as human errors and
 lead to enhanced code quality. By eliminating the manual writing work, the
@@ -179,17 +191,19 @@ points: efficiency and automation.
 
 \subsection{Efficiency}
 In terms of efficiency at run time, natively compiled machine code will always
-outperform the interpreted version. So why would we even care about writing
-efficient interpreters and not just use native code compilers?
-\\ \\
-One of the main reasons interpreters are preferred over compilers is that
-native code compilers are more complex to develop and difficult to maintain.
-~\cite{structure_and_performance} Another big advantage of the interpreting
-approach is that compilers can only generate native code for one target system
-while the virtual machine interpreter stays consistent on every system. By that
-the interpreter is portable and the generated code does not depend on the
+outperform the interpreted version since the virtual machine provides an
+additional layer of abstraction to the actual hardware. So why would we even
+care about writing efficient interpreters and not just use native code
+compilers? There are multiple reasons why we want to care about the performance
+of interpreters. The main benefit we gain from using interpreters instead of
+compilers is that compilers are much more complex to develop and can be
+difficult to maintain. ~\cite{structure_and_performance} Another reason for the
+interpreting approach lays in its portability. When compiling to native machine
+code, we limit ourself to just one target architecture. The virtual machine
+interpreter can execute the byte code that was generated for it on every system
+where the virtual machine can run and by that is not dependent on the
 underlying machine.
-\\ \\
+
 Summed up, the first problem is that interpreters will never be as fast as
 natively compiled machine code but by contributing to the increase of efficiency
 we get all the benefits of using interpreters while minimizing the
@@ -202,14 +216,12 @@ building an interpreter is a challenging task and requires a lot of work and a
 clear structure. In addition to that it shows that many parts of a VM
 interpreter are similar and repetitive. For example the code for executing VM
 instructions will be similar for most of the instructions. ~\cite{vmgen}
-\\ \\
 But what happens when the interpreter does not give the expected outcome in
 terms of efficiency? It results in manual rewriting of a codebase just to
 change the implementation of some part of the VM interpreter to see if the
 performance increases. Rewriting the whole interpreter to test if the
 performance is better using a different development approach is not only
 time-consuming but also error-prone.
-\\
 One solution to this problem is automation. The developer should be able to
 provide a configuration file and based on that we will generate an efficient VM
 interpreter. It will already use efficient implementation techniques and come
@@ -230,17 +242,14 @@ Most of the code written, targeting the problem of efficient interpreters or
 compilers, such as the referenced papers ~\cite{vmgen}, ~\cite{modern},
 ~\cite{superoperators} and ~\cite{stack_caching_for_interpreters} is either
 written in C or directly in assembly language. 
-\\\\
 But why are developers using languages such as C when it is known to be error
 prone or even assembly which is known to be even more complex and hard to
 maintain.
-\\\\
 The reason for this is abstraction. Languages such as Python or Java are so
 easy to write because the language itself provides many layers of abstraction
 from what is actually happening on the machine level. This makes it easier for
 the programmer to write safe code. The downside of this abstraction is that it
 limits the control the programmer has over the system. ~\cite{abstraction}
-\\\\
 In compiler development, there are many situations where it is crucial for the
 programmer to be able to use little tricks on the lowest layers of the system
 to reach a maximum performance gain. In the paper "Optimizing an ANSI C
@@ -252,13 +261,14 @@ of assembly by writing:
 Assembly language enables important optimizations like keeping the evaluation
 stack pointer and interpreter program counter in hardware registers." ~\cite{superoperators}
 \end{quotation}
-\\\\
+
 Another example of an optimization that is complicated to implement in high
 level languages such as Python but easy to implement in assembly and in some
 versions of C is the threaded code or computed goto optimization.
 
 As a limitation to C the authors of 'vmgen - A Generator of Efficient Virtual
 Machine Interpreters' state:
+
 \begin{quotation} 
 "This technique cannot be implemented in ANSI C, but it can be implemented in
 GNU C using the labels-as-values extension." ~\cite{vmgen} 
@@ -267,18 +277,15 @@ GNU C using the labels-as-values extension." ~\cite{vmgen}
 \subsection{Interpreter approaches}
 There are several ways to implement an interpreter. We are looking
 at the 2 most widely used practices. 
-\\\\
 Both of them start in the parsing phase by creating an Abstract Syntax
 Tree (AST). The tree consists of nodes each representing a construct in
 the programming language, for example, a statement or an expression. 
-\\\\
 The tree walk interpreter is the simplest way to create an interpreter when the
 AST is already built. As the name suggests it traverses the tree and when it
 encounters a node it executes the corresponding operation. Tree walk
 interpreters are easy from the viewing point of the implementor. The tree
 closely mirrors the structure of the source code and by that makes errors
 easier to debug in the tree structure. ~\cite{bebic}
-\\\\
 This simplicity comes with the cost of reduced performance. One reason why a
 tree-walk interpreter is slower than a bytecode interpreter is that as they
 traverse the tree they perform execution for each node which can result in
@@ -383,9 +390,9 @@ Here an example:
 
 \begin{figure}[ht]
     \begin{verbatim}
-        local a,t,i
-        a = a+i
-        a = a+1
+        local a, t, i
+        a = a + i
+        a = a + 1
         a = t[i]
     \end{verbatim}
     \caption{\textit{Example Lua code from ~\cite{lua_implementation}}}
@@ -450,7 +457,6 @@ interactivity, quick turnarounds, or non-C features (e.g., run-time
 code-generation or guaranteed tail-call optimization) are required."
 ~\cite{structure_and_performance}
 \end{quotation} 
-\\\\
 The paper 'Optimizing an ANSI C Interpreter with Superoperators' shows a hybrid
 approach that generates "efficient code that includes a small amount of native
 code with interpreted code". ~\cite{superoperators}
@@ -466,27 +472,24 @@ equivalent native code, and runs only 3-16 times slower." ~\cite{superoperators}
 In the following section, we will go into detail about why we have used the 
 techniques and tools as we did, re-evaluate the decisions and present 
 learnings.
-\\\\
 The choice of the implementation language had probably the most influence on
-the efficiency of the VM interpreter. The industry standard for implementing
-such systems is either C or assembly. We made the decision to use Rust early on
-to explore how we can use its higher-level language features, such as its
-enums, to do low-level programming and see if we can get close to the
-efficiency of C implementations with the convenience that Rust gives us during
-development. Rust prevents many errors from happening during development by for
-example enforcing strict rules on ownership of data and providing high-level
-language features such as iterators, match statements and a rich standard
-library of containers such as HashMaps.
-\\\\
-To represent byte code in Rust we used its powerful enums. This is very
-convenient since enums can have fields attached and are an actual type not like
-in C where enums are just numbers. While this approach is very convenient it is
-not very efficient. One byte code instruction as we designed the enum takes up
-32 bits of memory.
-\\\\
-The largest enum variant is the jump instruction as it holds a string `label`
-and an i32 `offset`. Since Rust's enums behave like a tagged union every
-instruction has the size of the largest instruction.
+the efficiency of our virtual machine interpreter. The industry standard for
+implementing such systems is either C or assembly. We made the decision to use
+Rust early on to explore how we can use its higher-level language features,
+such as its enums, to do low-level programming and see if we can get close to
+the efficiency of C implementations with the convenience that Rust gives us
+during development. Rust prevents many errors from happening during development
+by for example enforcing strict rules on ownership of data and providing
+high-level language features such as iterators, match statements and a rich
+standard library of algorithms and containers such as HashMaps. To represent
+byte code in Rust we decided to use its powerful enums. This is a very
+convenient way since enums can have fields attached to certain variants and are
+an actual type not like in C where enums are just numbers. While this approach
+is very convenient it is not very efficient. One byte code instruction as we
+designed the enum takes up 32 bits of memory. The largest enum variant is the
+jump instruction as it holds a string called `label` and an i32 called
+`offset`. Since Rust's enums behave like a tagged union every instruction has
+the size of the largest instruction.
 
 \begin{verbatim}
 A string in Rust contains:
@@ -500,10 +503,9 @@ A string in Rust contains:
 \end{verbatim}
 
 A more efficient approach to represent byte code in Rust would be to just
-define each instruction by a unique integer. By doing this, we would use the
-same technique as using enums in C and lose the convenience of using Rust's
-language features.
-\\\\ 
+define each instruction by a unique integer. By doing this, we would basically
+use the same technique as using enums in C and lose the convenience of using
+Rust's language features.
 A big downside that followed the decision to use Rust was the way we
 implemented the computed goto optimization. The detailed implementation is
 discussed in section \ref{it:goto}. Since Rust does not allow the usage of
@@ -514,7 +516,6 @@ indirection at the end of every executed instruction caused an extreme
 performance slowdown. The typical approach in C would be to store the addresses
 of the labels to the routines in an array and index it by using the C enum
 representation of an instruction.
-\\\\
 Earlier we evaluated that register-based virtual machines, when set up
 correctly, can be faster and more efficient than stack-based VMs.
 In our implementation, we still decided to use a stack-based virtual machine.
@@ -546,7 +547,8 @@ executes the byte code that was generated by the compiler.
 
 \subsubsection{Implementation}
 The virtual machine we have built is very basic. It contains a representation
-of the stack and a HashMap to hold the global variables.
+of the stack, the program counter (pc) which is used as an index into the
+series of instructions and a HashMap to hold the global variables.
 
 \begin{verbatim}
 pub struct ByteCodeInterpreter {
@@ -576,9 +578,9 @@ pub struct ByteCodeInterpreterThreaded {
 \subsubsection{Stack}
 The virtual machine we built is stack-based. This means there are no registers
 and all the data is handled on the stack. When you add two numbers there will
-be a PUSH instruction for both values and an ADD instruction which will pop the
-last two values from the stack, adds them together and pushes the result back
-on the stack.
+be a PUSH instruction for both of the values and an ADD instruction which will
+pop the last two values from the stack, adds them together and pushes the
+result back on the stack.
 
 \begin{verbatim}
 The code `1 + 2` would produce the following instructions:
@@ -593,9 +595,10 @@ add      [3]
 \subsubsection{Byte code}
 \label{sec:byte_code}
 
-To define a byte code we have decided to use Rust's powerful enums. They are
-not only able to perfectly represent each instruction with its parameters but
-also helps during development due to Rust's powerful type system.
+There a many ways to model a byte code in Rust. We have decided to use Rust's
+powerful enums. They are not only able to perfectly represent each instruction
+with its parameters but also helps during development due to Rust's powerful
+type system.
 
 \begin{verbatim}
 
@@ -624,9 +627,11 @@ pub enum ByteCode {
 
 \subsection{Interpreter}
 The interpreter consists of a scanner and a parser. We have decided to
-handwrite both parts instead of generating them. Even though the scanner and
-the parser are not the most performance-critical parts of an interpreter we
-decided to handwrite them in Rust to have full control over what is happening.
+handwrite both parts instead of using tools like 'Lex' which can be used to
+automatically generate a scanner from a definition file. Even though the
+scanner and the parser are not the most performance-critical parts of an
+VM interpreter we decided to handwrite them in Rust to have full control over
+what is happening.
 
 \subsubsection{Scanner}
 The scanner was implemented very straight forward by using a match statement
@@ -640,6 +645,10 @@ pub struct Token {
 }
 \end{verbatim}
 \textit{Token definition}
+
+The `Object` type represents a literal expression such as a number, an
+identifier for a variable or a boolean value like True or False. Other than
+that it is used to carry information about errors when they occure.
 
 \begin{verbatim}
 pub enum Object {
@@ -669,11 +678,12 @@ pub enum TokenType {
 The parser takes the stream of tokens as input and builds up an Abstract Syntax
 Tree (AST). In the Rust code, it is represented as a `Vec<Rc<Stmt>>`.
 
-\begin{verbatim}
-As an example the code `x := 10;` will get tokenized into 
-`[Identifier,Assignment, NumberLiteral, Semicolon]` 
-and the parser will output a tree structure like:
+As an example, the code `x := 10;` will get passed into the scanner. It returns
+a token stream like this: `[Identifier, Assignment, NumberLiteral, Semicolon, EOF]`.
+The parser will iterate though the list of tokens and builds up a tree
+structure (Abstract Syntax Tree) like this:
 
+\begin{verbatim}
 ExpressionStmt {
     expr: AssignExpr {
         name: "x",
@@ -686,7 +696,7 @@ ExpressionStmt {
 
 \subsubsection{Interpreter (testing)}
 To be able to test the scanner and parser before writing the bytecode generator
-we build a small interpreter that just runs the code.
+we decided to build a small tree walk interpreter that just runs the code.
 It uses the visitor pattern to traverse the abstract syntax tree generated by
 the parser and executes the code immediately.
 \\
@@ -704,7 +714,9 @@ pub trait StmtVisitor<T> {
 \end{verbatim}
 \textit{Statement visitor example}
 
-For each statement, we have set up a structure holding the necessary data.
+For each statement, we have set up a structure holding the necessary data. For example
+in the structure for the if statement, we need the condition, which is of type Expr,
+the statement in the then\_branch and the optional statement for the else branch.
 
 \begin{verbatim}
 #[derive(Debug)]
@@ -719,10 +731,11 @@ pub struct IfStmt {
 
 \subsection{Optimizations}
 Optimizations play a critical role in the field of compiler design. From the
-endless list of optimizations we chose a couple of ones to dive into detail
-about and use in the VM interpreter.
+endless list of optimizations we chose a couple interesting ones, that are not
+too hard to implement, to dive into detail about and use in our virtual machine
+interpreter.
 
-Some common techniques are:
+Some well known optimization techniques are:
 \begin{enumerate}
     \item \textbf{Dead Code Elimination}:\\
     \label{item:dead_code_elimination}
@@ -741,22 +754,25 @@ Some common techniques are:
         \end{verbatim}
     \item \textbf{Constant folding}:\\
         When calculations are only using constant values and by that can be
-        evaluated during compile time it will directly replace it with the
-        computed value.
+        evaluated during compile time the compiler will directly replace it
+        with the computed value.
 
-        Consider the following C code. In this example `int a = 10 + 20;` only uses values known
-        at compile time so the compiler can internally replace the statement with `int a = 30;`.
+        Consider the following C code. In this example `int a = 10 + 20 + 30;`
+        only uses values known at compile time. So instead of multiple PUSH
+        instructions and ADD instructions the compiler could internally replace
+        the statement with `int a = 60;` and by that just have one value.
+
         \begin{verbatim}
         int main() {
-            int a = 10 + 20;
+            int a = 10 + 20 + 30;
             printf("%d", a);
 
             return 0;
         }
         \end{verbatim}
     \item \textbf{Superinstructions}:\\
-        Superinstructions is a term used for the case when combining two or more instructions 
-        into a single big instruction.
+        Superinstructions is a term used for the case when we can combine two or
+        more instructions into a single big instruction.
 
         Consider the following C code.
 
@@ -802,10 +818,10 @@ Some common techniques are:
 
     \item \textbf{Computed goto}:\\
     \label{it:goto}
-        When executing the bytecode inside of a virtual machine interpreter, for
-        example, you will usually find a big switch statement inspecting the
-        current instruction and executing it. In our case, since we used Rust
-        we have a big match statement like this.
+        When executing the byte code inside of a virtual machine interpreter,
+        for example, you will usually find a big switch statement inspecting
+        the current instruction and executing it. In our case, since we are
+        using Rust we have a big match statement like this:
 
         \begin{verbatim}
 
@@ -853,7 +869,7 @@ Some common techniques are:
         Then each of the functions (Self::op\_push, Self::op\_add, ...) will
         finish with a call to a `next()` function. This next() function will
         increment the program counter (the current position in the byte code)
-        and call the function which was mapped to the next instruction in the
+        and call the function which is mapped to the next instruction in the
         HashMap. In our case in Rust, the next function looks like the
         following.
 
@@ -880,17 +896,22 @@ Some common techniques are:
 
 \subsubsection{Replacing superinstructions in the byte code}
 \label{sec:replacing_superinstructions}
-To create a byte code that involves superinstructions we first need to generate
-the normal byte code. In a second iteration we go through the sequence of
+To generate a byte code that uses superinstructions we first need to generate the
+normal byte code. In a second iteration we need to go through the sequence of
 instructions and check if we can combine any of the instructions into a
-superinstruction. This step will need to iterate through all the instructions
-once and by that grow linear with the size of the byte code.
+superinstruction. During this process we need to iterate through all the
+instructions once and by that the time it takes grows linear with the size of
+the byte code. This approach of applying the optimization is also called
+peephole optimization as we are scanning through the list of instructions
+only looking at a small part of it at a time.
 
 \subsection{Input language} % talk about imp
 \label{sec:input_language}
 When you want to build a virtual machine interpreter you need to have an
-input language. Instead of creating our own programming language for this
-project, we chose the programming language Imp. ~\cite{Pierce:SF1}
+input language. We have decided to use an already existing programming
+language instead of creating our own since this project aims to explore
+the implementation of a VM interpreter and not the design of a programming
+language. We chose to use the programming language Imp. ~\cite{Pierce:SF1}
 
 \begin{quotation}
 "Imp is a simple imperative programming language which embodies a tiny core
@@ -907,21 +928,20 @@ fragment of conventional mainstream languages such as C or Java". ~\cite{Pierce:
 \end{verbatim}
 \textit{Example code in the Imp programming language} \\
 
-Not only is Imp simple but it is already fully defined and has many examples we
-can test against. The book `IMP Simple Imperative Programs` by Benjamin C.
-Pierce ~\cite{Pierce:SF1} describes the language in detail and provides
-additional information such as BNF grammar definitions of the syntax which
-makes it easy to understand and provides a guideline when developing the
-scanner and parser of the interpreter.
+Not only is Imp simple but it is also already fully defined and has many
+examples we can test against. The book `IMP Simple Imperative Programs` by
+Benjamin C. Pierce ~\cite{Pierce:SF1} describes the language in detail and
+provides additional information such as BNF grammar definitions of the syntax.
+This fact makes it easy to understand and provides a guideline when developing
+the scanner and parser of the interpreter.
 \\\\
-The language has no local scope resulting in all variables being global. This
-fact makes it easier for us since we do not need to keep track of scopes or
-environments and the variable lookup in our interpreter is just one single
-HashMap that holds all global variables.
+The language has no local scope resulting in all variables falling into global
+scope. This fact makes it easier for us since we do not need to keep track of
+scopes or environments and the variable lookup in our interpreter can be
+implemented using just a single HashMap that holds all global variables.
 \\\\
-Variables can be assigned without the need to give an explicit type since all
-the variables in Imp are numbers. Again this makes it very convenient for us to
-implement.
+To declare variables in Imp we do not need to provide an explicit type. Since
+all variables in Imp are numbers it makes it very convenient for us to implement.
 
 \begin{verbatim}
     a := 1;
@@ -930,8 +950,8 @@ implement.
 \textit{Variable assignment in the Imp programming language} \\
 
 Imp defines while loops which are delimited by the `do` and `end` keywords and
-do not need any parentheses around the condition. Those particular circumstances
-make it easy to parse.
+does not need any parentheses around the condition. Those particular circumstances
+make Imp really easy to parse.
 
 \begin{verbatim}
     a := 0;
@@ -942,7 +962,7 @@ make it easy to parse.
 \textit{While statement in the Imp programming language} \\
 
 Similar to while loops, if statements are also defined without any unnecessary
-parentheses and it is delimited with describing keywords like `then`, `else`
+parentheses and are delimited by describing keywords like `then`, `else`
 and `end`.
 
 \begin{verbatim}
@@ -954,8 +974,8 @@ and `end`.
 \textit{If statement in the Imp programming language} \\
 
 For convenience and testing purposes we added our own keyword `print` to the
-language. It helps during development to get a better view of the execution
-of the interpreter.
+language. It helps us to get an inside view of the execution of the interpreter,
+which can be very helpful during development or while debugging.
 
 \begin{verbatim}
     a := 0;
@@ -988,13 +1008,14 @@ To create the benchmarks we have used a system with the following specs.
         rustc 1.66.0
 \end{enumerate}
 
-The script `benchmark.py` runs the program with every file in the
-`./benchmarks` directory as an input. It then generates visualization using
-matplotlib. To collect the benchmark timings and reduce the chance of outliers,
-that can occur because of external reasons such as system load or memory
-availability, the script executes each command 10 times and calculates the
-average. To toggle different superinstructions inside of the Rust code from the
-outside we have used Cargo's `features` option.
+The script `benchmark.py` runs the virtual machine interpreter using every
+program defined in the `./benchmarks` directory as an input. It then generates
+visualization using the python library matplotlib. To collect the benchmark
+timings and reduce the chance of outliers, that can occur because of external
+reasons such as system load or memory availability, the script executes each
+command 10 times and calculates the average. To be able to specify which
+superinstructions should be used in the current execution of the VM interpreter 
+we have used Cargo's `features` option.
 \\\\
 The following code shows how to write conditional code that will be turned on
 or off during compilation in Rust.
@@ -1014,13 +1035,13 @@ or off during compilation in Rust.
 
 \subsection{Test Programs}
 To get the benchmark data we used multiple small programs that generate
-different byte code. By that, we can see which optimization gives the most
-benefit for what kind of program.
+different byte code. By doing that, we can see which optimization gives the
+most benefit for what kind of program.
 
 As test programs, we used:
 \begin{enumerate}
     \item \textbf{Factorial.imp}:\\
-    A simple program to calculate 10!.
+    A simple program to calculate 10 factorial.
 \begin{verbatim}
     result := 1;
     n := 10;
@@ -1047,7 +1068,7 @@ As test programs, we used:
     end
 \end{verbatim}
     \item \textbf{Gcd.imp}:\\
-    A program to calculate the greatest common divisor of two numbers.
+    A program to calculate the greatest common divisor (GCD) of two numbers.
 \begin{verbatim}
     a := 234234;
     b := 234;
@@ -1162,9 +1183,9 @@ superinstruction combination took.
 \subsection{Results}
 The following images show the performance analysis charts.
 \\\\
-The y-axis, calibrated in milliseconds, shows the time.
+The y-axis is calibrated in milliseconds and shows the time.
 \\
-On the x-axis we show the different files. Each enty has 3 values attached to it.
+On the x-axis we show the different files. Each entry has 3 values attached to it.
 
 \begin{enumerate}
     \item \textbf{Generation time (blue)}:\\
@@ -1204,32 +1225,32 @@ On the x-axis we show the different files. Each enty has 3 values attached to it
     \label{fig:all_op}
 \end{figure}
 
-Looking at the first diagram with no optimizations enabled we get the base
-line. Now we can compare it with some of the superinstruction optimizations.
+The first diagram \ref{fig:no_op} has no optimizations enabled. We can use
+this as the base line. Now we can compare figure \ref{fig:no_op} with
+the figures that have superinstructions enabled.
 \\\\
-First of all, we can see that the threaded code optimization causes a slowdown
-of approximately 300\% compared to the non-optimized version. But why is this?
-We have already explained how we have implemented the computed goto
-optimization for that see Section \ref{it:goto}. There you can see that we used
-a hash map to store the mapping of byte code instruction to the function that
-implements it. The key is a usize. This usize is the result of a call to the
-std::mem::discriminant function. It returns the index of a given variant in an
-enum. Since Rust does not by default allow an enum with fields that hold data
-to be the key of a hash map we had to use this approach. After every
-instruction, we need to call the discriminant function to get the index of the
-next byte code instruction. This overhead is most likely the main reason for
-the slowdown.
-\\\\
+When we compare the graphs, we can see that the threaded code optimization
+causes a slowdown of approximately 300\% compared to the non-optimized version.
+But why is this optimization making the program slower? We have already
+explained how we have implemented the computed goto optimization for that see
+Section \ref{it:goto}. There you can see that we used a hash map to store the
+mapping of byte code instruction to the function that implements it. The key is
+a usize. This usize is the result of a call to the std::mem::discriminant
+function. It returns the index of a given variant in an enum. Since Rust does
+not by default allow an enum with fields that hold data to be the key of a hash
+map we had to use this approach. After every instruction, we need to call the
+discriminant function to get the index of the next byte code instruction. This
+overhead is most likely the main reason for the slowdown. 
+\\\\ 
 When we are comparing Figure \ref{fig:push_add} (PushAdd) and Figure
 \ref{fig:no_op} (No optimizations) we can see that the implementation of the
 superinstruction PushAdd which combines the PUSH and the ADD instruction
-resulted in slight improvements in the run time.
-The biggest performance benefit was gained in the increment\_loop.imp program
-\ref{item:inc_loop}. The generated byte code for this program uses the
-combination of pushing the value 1 to the stack and adding it to a variable in
-a loop. Combining those two instructions we can gain almost a 20\% speed
-improvement in the threaded code and a 6\% speed improvement in non-threaded
-code.
+resulted in slight improvements in the run time. The biggest performance
+benefit was gained in the increment\_loop.imp program \ref{item:inc_loop}. The
+generated byte code for this program uses the combination of pushing the value
+1 to the stack and adding it to a variable in a loop. Combining those two
+instructions we can gain almost a 20\% speed improvement in the threaded code
+and a 6\% speed improvement in non-threaded code.
 \\\\
 The following shows the generated byte code for the increment\_loop.imp program
 without using any superinstructions.
@@ -1302,19 +1323,19 @@ important factors to consider when trying to write an efficient VM interpreter.
 We explored the implementation in Rust, using its high-level features. We
 showed that those features, such as Rust's enums, are a convenient way to
 implement a VM interpreter but this might not be the most optimal approach to it.
-When comparing it to how you would implement for example the byte code in C, we
-can see that the technique that is not that convenient for the developer is
-actually way faster and more efficient.
-The same applies to the technique used to implement optimizations like the
-threaded code in the interpreter.
+When comparing it to the way you would implement, for example, the byte code in
+C, we can see that the technique that is not that convenient for the developer
+is actually way faster and more efficient. The same applies to the technique
+used to implement optimizations like the threaded code in the interpreter.
 \\\\
-When talking about optimizations, we showed that even simple optimizations
-like superinstructions can have a measurable impact on performance. 
+When talking about optimizations, we showed that even simple optimizations like
+superinstructions can have a positive impact on run time performance while
+causing a slowdown during the generation of the byte code. 
 
 \section{Future Work}
 \label{sec:future}
-The last section of this paper will focus on ways to improve this project
-in the future.
+The last section of this paper will focus on possible ways to improve this
+project in the future.
 \\\\
 Looking at the title of this paper and comparing it to the write-up we can see
 that we are missing an essential part. The part of automation.
@@ -1345,10 +1366,17 @@ in the paper 'Optimizing an ANSI C Interpreter with Superoperators'
 sets of superinstructions. This approach automates the process of finding good
 superinstructions to use.
 \\\\
-Another way to further develop this project is to change the architecture of the
+Yet another way to further develop this project is to change the architecture of the
 virtual machine and use a register-based machine. Doing this would also result
 in a change of the byte code representation and optimally make the VM interpreter
 more efficient.
+\\\\
+Finally after making the virtual machine interpreter efficient to work with Imp,
+we could project this system onto a different input language. In the future we
+could support rather simple scripting languages like Lua or Ruby or more complex
+languages such as Python. Another idea would be to let the user define the
+syntax of the input language in a configuration file using and we generate
+the scanner and the parser accordingly.
 
 \clearpage
 \bibliographystyle{plain}
